# A-medio

./: AGENTS.md  README.md  pyproject.toml
src/A_medio/: __init__.py  cli.py  config.py
src/A_medio/data/: storage.py
src/A_medio/services/: __init__.py  base.py  youtube.py
src/A_medio/services/youtube/: __init__.py  _cookie_helpers.py  _csv_helpers.py  _format_helpers.py  _models.py  _strategy.py  _wrapper.py  service.py
tests/: conftest.py  test_config.py  test_storage.py  test_youtube.py
