[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "A-medio"
version = "0.1.0"
description = "A — media management (video, photo, audio)"
authors = [{name = "Ron"}]
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[project.entry-points."A.commands"]
filmeto = "A_medio.cli:filmeto"
foto = "A_medio.cli:foto"
audio = "A_medio.cli:audio"

[tool.hatch.build.targets.wheel]
packages = ["src/A_medio"]

[tool.poetry]
name = "A-medio"
version = "0.1.0"
description = "A — media management (video, photo, audio)"
authors = ["Ron"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
A-core = { path = "../A-core" }
typer = {version = ">=0.12.0", extras = ["rich"]}
rich = ">=13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]